--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.section-white h1{
+    color: #163853;
+}
 :root{
     --color-bacground:#163853;
 }
